text overlap fix

--- a/introvette/src/app/home/home.component.css
+++ b/introvette/src/app/home/home.component.css
@@ -5,14 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 /* --------------------- */
 
-html {
-  height: 100vh;
-}
 
-.home-page body {
-  display: flex;
-  flex-direction: column;
-}
 
 
 
